# ElainaBot

./: .replit  README.md  client_secret.json  config.py  index.py  note.txt  package-lock.json  pyproject.toml  replit.nix  server.py  utility.py
commands/: __init__.py  character.py  confirm.py  fortune.py  helpCommand.py  make_it_a_quote.py  report.py  roll.py  tts.py  weather.py
commands/Fonts/: note.txt
events/: __init__.py  common.py  on_message_.py  on_ready_.py  task_loop.py
